# SearchEngine

./: CMakeLists.txt  Readme.md  config.ini
config/: config.cpp  config.h  config.ini
database/: database.cpp  database.h
server/: CMakeLists.txt  index.html  main.cpp  search.cpp  search.h  server.cpp  server.h  utils.cpp  utils.h
spider/: CMakeLists.txt  crawler.cpp  crawler.h  link.cpp  link.h  main.cpp
